--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
       "handle": "filesystem"
     },
     {
-      "src": "/(.*)",
+      "src": "/",
       "status": 200,
       "dest": "/index.html"
     }
