--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,14 @@
 {
-
+  "routes": [
+    {
+      "src": "/tag/:tagNumber",
+      "status": 200,
+      "dest": "/index.html"
+    },
+    {
+      "src": "/name/:ItemName",
+      "status": 200,
+      "dest": "/index.html"
+    }
+  ]
 }
