--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "redirects": [
-    { "source": "/tag/(.*)", "destination": "/", "statusCode": 301 },
-    { "source": "/name/(.*)", "destination": "/", "statusCode": 301 }
+  "rewrites": [
+    { "source": "/tag/:tagNumber/(.*)", "destination": "/tag/:tagNumber/$1" },
+    { "source": "/name/:ItemName/(.*)", "destination": "/name/:ItemName/$1" },
+    { "source": "/tag/", "destination": "/tag/:tagNumber/" },
+    { "source": "/name/", "destination": "/name/:ItemName/" }
   ]
 }
